--- a/GoodExchangeApplication/MyRazorPage/Pages/Moderators/ReportManagementPage.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Moderators/ReportManagementPage.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewData["Title"] = "Report Management";
     Layout = "_Layout";
-    var session = HttpContext.Session.GetString("GetSeller"); // Or whatever your session key is
+    var session = HttpContext.Session.GetString("GetMod"); // Or whatever your session key is
 }
 
 <h2>Reports</h2>
