--- a/GoodExchangeApplication/MyRazorPage/Pages/Account/register.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Account/register.cshtml
@@ -20,10 +20,8 @@
             <div class="row min-vh-100 content-layout-register">
                 <!-- Image -->
                 <div class="col-md-6 d-flex align-items-center justify-content-center side-image">
-                    <img src="~/images/side_image.jpg" alt="" />
-                    <div class="text">
-                        <p>Join the community of FU Students <i>- Goodies</i></p>
-                    </div>
+                    <img src="~/images/4ad2b45e-46da-48a3-b327-58de471d5589.png" alt="" />
+                    
                 </div>
                 <!-- Registration Form -->
                 <div class="col-md-6 d-flex align-items-center justify-content-center ">
