--- a/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/AddToCart.cshtml
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 @if(getUserSession != null)
 {
+    <a asp-page="/Homepage/ProductList" class="btn btn-primary">Back to product list</a>
     <div class="container py-5">
         <div class="row d-flex justify-content-center my-4">
             <div class="col-md-8">
