--- a/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductDetailPage.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Homepage/ProductDetailPage.cshtml
@@ -238,7 +238,8 @@
                                         }
                                         else
                                         {
-                                            <input type="button" class="btn btn-success btn-lg" value="AddToCart" />
+                                            <a asp-page="/Account/login" class="btn btn-success btn-lg">AddToCart</a>
+                                            
                                         }
                                         
                                              
