--- a/GoodExchangeApplication/MyRazorPage/Pages/Index.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Index.cshtml
@@ -91,6 +91,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-page="/Post">Post</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="navbar align-self-center d-flex">
@@ -381,7 +384,7 @@
                     </div>
                     <div class="d-flex align-items-start mb-3">
                         <div class="me-3">
-                            <img src="@Url.Content("~/images/protectionIMG.jpg")" alt="Cost Savings" class="img-fluid" />
+                            <img src="@Url.Content("~/images/protect.webp")" alt="Cost Savings" class="img-fluid" />
                         </div>
                         <div>
                             <h5>Cost Savings</h5>
@@ -390,7 +393,7 @@
                     </div>
                     <div class="d-flex align-items-start mb-3">
                         <div class="me-3">
-                            <img src="@Url.Content("~/images/protectionIMG.jpg")" alt="Resource Conservation" class="img-fluid" />
+                            <img src="@Url.Content("~/images/protect.webp")" alt="Resource Conservation" class="img-fluid" />
                         </div>
                         <div>
                             <h5>Resource Conservation</h5>
@@ -406,7 +409,7 @@
                 <div class="col-12 col-md-8 col-lg-4 mb-4">
                     <div class="d-flex align-items-start mb-3">
                         <div class="me-3">
-                            <img src="@Url.Content("~/images/protectionIMG.jpg")" alt="Discover Unique Items" class="img-fluid" />
+                            <img src="@Url.Content("~/images/protect.webp")" alt="Discover Unique Items" class="img-fluid" />
                         </div>
                         <div>
                             <h5>Discover Unique Items</h5>
@@ -415,7 +418,7 @@
                     </div>
                     <div class="d-flex align-items-start mb-3">
                         <div class="me-3">
-                            <img src="@Url.Content("~/images/protectionIMG.jpg")" alt="Build Community" class="img-fluid" />
+                            <img src="@Url.Content("~/images/protect.webp")" alt="Build Community" class="img-fluid" />
                         </div>
                         <div>
                             <h5>Build Community and Social Connections</h5>
@@ -424,7 +427,7 @@
                     </div>
                     <div class="d-flex align-items-start mb-3">
                         <div class="me-3">
-                            <img src="@Url.Content("~/images/protectionIMG.jpg")" alt="Sustainable Consumption" class="img-fluid" />
+                            <img src="@Url.Content("~/images/protect.webp")" alt="Sustainable Consumption" class="img-fluid" />
                         </div>
                         <div>
                             <h5>Encourage Sustainable Consumption Habits</h5>
