--- a/GoodExchangeApplication/MyRazorPage/Pages/SellerHistory/TransactionHistoryForSeller.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/SellerHistory/TransactionHistoryForSeller.cshtml
@@ -135,9 +135,9 @@
                     <div class="nav-buttons">
                         <a asp-page="/Seller/PostManagement" class="btn btn-secondary">Post Management</a>
                         <a asp-page="/Seller/ProductManagement" class="btn btn-secondary">Product Management</a>
-                        <a asp-page="/Logout" class="btn btn-danger">Logout</a>
+                        <a asp-page="/Account/login" class="btn btn-danger">Logout</a>
                     </div>
-                    <p class="mb-0 small text-muted">1 Pending</p>
+                    
                 </div>
                 <div class="card table-card">
                     <div class="table-responsive">
