--- a/GoodExchangeApplication/MyRazorPage/Pages/Seller/CreatePost.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Seller/CreatePost.cshtml
@@ -17,8 +17,13 @@
     <div class="form-group">
         <label>Description</label>
         <textarea name="txtDescription" class="form-control"></textarea>
-        
     </div>
+
+    <div class="form-group">
+        <label>Image</label>
+        <textarea name="txtImageURL" class="form-control"></textarea>
+    </div>
+
 
     <div class="form-group">
         <label>Product</label>
