--- a/GoodExchangeApplication/MyRazorPage/Pages/Seller/UpdatePost.cshtml
+++ b/GoodExchangeApplication/MyRazorPage/Pages/Seller/UpdatePost.cshtml
@@ -27,6 +27,11 @@
            
         </div>
         <div class="form-group">
+            <label>Image</label>
+            <textarea name="txtImage" value="@json.ImageURL" class="form-control"></textarea>
+
+        </div>
+        <div class="form-group">
             <label>Product</label>
             <select name="txtSelectProduct" class="form-control">
                 @foreach (var product in Model.Products)
